xml: Don't crash parsing empty XML string

Calling rest_xml_parser_parse_from_data() with an empty string ("")
currently causes a crash as xmlReaderForMemory() returns NULL in that
case, and we then try to dereference this pointer without checking it's
non-NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=789053